--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>87% Win Rate Forex Strategy - Engulfing Bar Setup (No Indicators)</h3>
                         <div class="channel">The Transparent Trader</div>
-                        <div class="date">11 minutes ago</div>
+                        <div class="date">34 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Bro was on pause😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Why Nothing Truly Fulfills You</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>The Mystical Serpent | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>At what temperature should pizza be cooked?</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -1630,7 +1630,7 @@
                     <div class="video-info">
                         <h3>Eye watering</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>87% Win Rate Forex Strategy - Engulfing Bar Setup (No Indicators)</h3>
                             <div class="channel">The Transparent Trader</div>
-                            <div class="date">11 minutes ago</div>
+                            <div class="date">34 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Why Nothing Truly Fulfills You</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>The Mystical Serpent | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>At what temperature should pizza be cooked?</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Bro was on pause😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10628,7 +10628,7 @@
                         <div class="video-info">
                             <h3>Eye watering</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
