--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Chinnamasta – A Wild Goddess | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Bro was on pause😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -585,7 +585,7 @@
                     <div class="video-info">
                         <h3>How To Trust Your Trading Strategy</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -959,7 +959,7 @@
                     <div class="video-info">
                         <h3>90% Winning Rate Is Useless. Here's Why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5809,7 +5809,7 @@
                         <div class="video-info">
                             <h3>How To Trust Your Trading Strategy</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5919,7 +5919,7 @@
                         <div class="video-info">
                             <h3>90% Winning Rate Is Useless. Here's Why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Chinnamasta – A Wild Goddess | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Bro was on pause😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
